Added Horowhenua Honey Co project.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,23 @@
           <section>
             <div class="row">
               <div class="col-6">
+                <a href="projects/horowhenua-honey-co.html" class="outer-box">
+                  <img src="images/project-thumbs/horowhenua-honey-co-thumb.png" onerror="this.src='images/project-thumbs/horowhenua-honey-co-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for the Horowhenua Honey Co website."/>
+                  <div class="caption">
+                    <p class="bigger">Horowhenua Honey Co Website</p>
+                    <p>User interface design for controlling heat pumps.</p>
+                    <ul class="inline-list">
+                      <li><span class="label">Branding</span></li>
+                      <li><span class="label">Visual design</span></li>
+                      <li><span class="label">Responsive design</span></li>
+                    </ul>
+                  </div>
+                  <div class="overlay">
+                    <p><span class="sr-only">Find out more about the Horowhenua Honey Co website.</span></p>
+                  </div>
+                </a>
+              </div>
+              <div class="col-6">
                 <a href="projects/heat-pump-controller.html" class="outer-box">
                   <img src="images/project-thumbs/heat-pump-controller-thumb.png" onerror="this.src='images/project-thumbs/heat-pump-controller-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for the Heat pump Controller."/>
                   <div class="caption">
@@ -51,7 +68,7 @@
                     <p>User interface design for controlling heat pumps.</p>
                     <ul class="inline-list">
                       <li><span class="label">Branding</span></li>
-                      <li><span class="label">UI design</span></li>
+                      <li><span class="label">Visual design</span></li>
                       <li><span class="label">Responsive design</span></li>
                     </ul>
                   </div>
@@ -60,23 +77,25 @@
                   </div>
                 </a>
               </div>
+            </div>
+            <div class="row">
               <div class="col-6">
-                <a href="projects/css-sheep.html" class="outer-box">
-                  <img src="images/project-thumbs/css-sheep-thumb.png" onerror="this.src='images/project-thumbs/css-sheep-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for CSS3 sheep animation."/>
+                <a href="projects/matt-rose.html" class="outer-box">
+                  <img src="images/project-thumbs/matt-rose-thumb.png" onerror="this.src='images/project-thumbs/matt-rose-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for Matthew's and Rosanna's Story."/>
                   <div class="caption">
-                    <p class="bigger">CSS3 Animated Sheep</p>
-                    <p>An experiment with CSS3 animations.</p>
+                    <p class="bigger">Matthew's and Rosanna's Story</p>
+                    <p>An illustrated story about my fianc&#233; and I.</p>
                     <ul class="inline-list">
-                      <li><span class="label">CSS3 Animation</span></li>
+                      <li><span class="label">Visual design</span></li>
+                      <li><span class="label">Responsive design</span></li>
+                      <li><span class="label">Graphic design</span></li>
                     </ul>
                   </div>
                   <div class="overlay">
-                    <p><span class="sr-only">Find out more about my CSS sheep.</span></p>
+                    <p><span class="sr-only">Find out more about Matthew and Rosanna's Story.</span></p>
                   </div>
                 </a>
               </div>
-            </div>
-            <div class="row">
               <div class="col-6">
                 <a href="projects/branding.html" class="outer-box">
                   <img src="images/project-thumbs/branding-thumb.png" onerror="this.src='images/project-thumbs/branding-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for Personal branding."/>
@@ -93,24 +112,23 @@
                   </div>
                 </a>
               </div>
+            </div>
+            <div class="row">
               <div class="col-6">
-                <a href="projects/matt-rose.html" class="outer-box">
-                  <img src="images/project-thumbs/matt-rose-thumb.png" onerror="this.src='images/project-thumbs/matt-rose-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for Matthew's and Rosanna's Story."/>
+                <a href="projects/css-sheep.html" class="outer-box">
+                  <img src="images/project-thumbs/css-sheep-thumb.png" onerror="this.src='images/project-thumbs/css-sheep-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for CSS3 sheep animation."/>
                   <div class="caption">
-                    <p class="bigger">Matthew's and Rosanna's Story</p>
-                    <p>An illustrated story about my fianc&#233; and I.</p>
+                    <p class="bigger">CSS3 Animated Sheep</p>
+                    <p>An experiment with CSS3 animations.</p>
                     <ul class="inline-list">
-                      <li><span class="label">Web design</span></li>
-                      <li><span class="label">Graphic design</span></li>
+                      <li><span class="label">CSS3 Animation</span></li>
                     </ul>
                   </div>
                   <div class="overlay">
-                    <p><span class="sr-only">Find out more about Matthew and Rosanna's Story.</span></p>
+                    <p><span class="sr-only">Find out more about my CSS sheep.</span></p>
                   </div>
                 </a>
               </div>
-            </div>
-            <div class="row">
               <div class="col-6">
                 <a href="projects/restaurant88.html" class="outer-box">
                   <img src="images/project-thumbs/restaurant88-thumb.png" onerror="this.src='images/project-thumbs/restaurant88-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for Restaurant 88's website."/>
@@ -118,7 +136,7 @@
                     <p class="bigger">Restaurant 88 Website</p>
                     <p>A website for Restaurant 88 and their sister store Banh Mi 88.</p>
                     <ul class="inline-list">
-                      <li><span class="label">Web design</span></li>
+                      <li><span class="label">Visual design</span></li>
                       <li><span class="label">Responsive design</span></li>
                     </ul>
                   </div>
@@ -127,6 +145,8 @@
                   </div>
                 </a>
               </div>
+            </div>
+            <div class="row">
               <div class="col-6">
                 <a href="projects/lca2015.html" class="outer-box">
                   <img src="images/project-thumbs/lca-2015-thumb.png" onerror="this.src='images/project-thumbs/lca-2015-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for the Linux Conference Auckland 2015 Website Mockup."/>
@@ -134,7 +154,7 @@
                     <p class="bigger">LCA2015 Website Mock up</p>
                     <p>Designs for the website for the Linux Conference 2015.</p>
                     <ul class="inline-list">
-                      <li><span class="label">Web design</span></li>
+                      <li><span class="label">Visual design</span></li>
                     </ul>
                   </div>
                   <div class="overlay">
@@ -142,8 +162,6 @@
                   </div>
                 </a>
               </div>
-            </div>
-            <div class="row">
               <div class="col-6">
                 <a href="projects/vbc-blog.html" class="outer-box">
                   <img src="images/project-thumbs/vbc-blog-thumb.png" onerror="this.src='images/project-thumbs/vbc-blog-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for VBC's blog theme."/>
@@ -159,6 +177,8 @@
                   </div>
                 </a>
               </div>
+            </div>
+            <div class="row">
               <div class="col-6">
                 <a href="projects/vector-graphics-foo.html" class="outer-box">
                   <img src="images/project-thumbs/vector-art-thumb.png" onerror="this.src='images/project-thumbs/vector-art-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for Vector Graphics Foo."/>
@@ -171,24 +191,6 @@
                   </div>
                   <div class="overlay">
                     <p><span class="sr-only">Find out more about Vector Graphics Foo.</span></p>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-6">
-                <a href="projects/generated-shapes.html" class="outer-box">
-                  <img src="images/project-thumbs/generated-shapes-thumb.png" onerror="this.src='images/project-thumbs/generated-shapes-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for Generated Shapes."/>
-                  <div class="caption">
-                    <p class="bigger">Generated Shapes</p>
-                    <p>Computer generated shapes using Python Processing.</p>
-                    <ul class="inline-list">
-                      <li><span class="label">Visual design</span></li>
-                      <li><span class="label">Creative programming</span></li>
-                    </ul>
-                  </div>
-                  <div class="overlay">
-                    <p><span class="sr-only">Find out more about Generated Shapes.</span></p>
                   </div>
                 </a>
               </div>
@@ -208,6 +210,25 @@
                   </div>
                 </a>
               </div>
+            </div>
+            <!--div class="row">
+              <div class="col-6">
+                <a href="projects/generated-shapes.html" class="outer-box">
+                  <img src="images/project-thumbs/generated-shapes-thumb.png" onerror="this.src='images/project-thumbs/generated-shapes-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for Generated Shapes."/>
+                  <div class="caption">
+                    <p class="bigger">Generated Shapes</p>
+                    <p>Computer generated shapes using Python Processing.</p>
+                    <ul class="inline-list">
+                      <li><span class="label">Visual design</span></li>
+                      <li><span class="label">Creative programming</span></li>
+                    </ul>
+                  </div>
+                  <div class="overlay">
+                    <p><span class="sr-only">Find out more about Generated Shapes.</span></p>
+                  </div>
+                </a>
+              </div>
+              
             </div>
             <div class="row">
               <div class="col-6">
@@ -240,7 +261,7 @@
                   </div>
                 </a>
               </div>
-            </div>
+            </div-->
           </section>
           <!--End main content-->
         </div>
