--- a/projects/css-sheep.html
+++ b/projects/css-sheep.html
@@ -47,7 +47,7 @@
           <div class="row">
             <div class="col-12">
               <p><img src="../images/css-sheep/sheep.png" onerror="this.src='../images/css-sheep/sheep.jpg'; this.onerror=null;" class="img-responsive" alt="CSS3 animated sheep on a large viewport."/><br/>
-              <span class="label">CSS3 animated sheep on a large viewport.</label></p>
+              <span class="label">CSS3 animated sheep on a large viewport.</span></p>
             </div>
           </div>
           <!--End main content-->
