--- a/projects/heat-pump-controller.html
+++ b/projects/heat-pump-controller.html
@@ -48,23 +48,23 @@
           <div class="row">
             <div class="col-12">
               <p><img src="../images/heatpump-controller/heat-pump-controller-lg-view.png" onerror="this.src='../images/heatpump-controller/heat-pump-controller-lg-view.jpg'; this.onerror=null;" class="img-responsive" alt="Heat pump Controller web interface on a large viewport."/><br/>
-              <span class="label">Heat pump Controller web interface on a large viewport.</label></p>
+              <span class="label">Heat pump Controller web interface on a large viewport.</span></p>
             </div>
           </div>
           <div class="row">
             <div class="col-8">
               <p><img src="../images/heatpump-controller/heat-pump-controller-md-view.png" onerror="this.src='../images/heatpump-controller/heat-pump-controller-md-view.jpg'; this.onerror=null;" class="img-responsive" alt="Heat pump Controller web interface on a large viewport."/><br/>
-              <span class="label">Heat pump Controller web interface on a smaller viewport.</label></p>
+              <span class="label">Heat pump Controller web interface on a smaller viewport.</span></p>
             </div>
             <div class="col-4">
               <p><img src="../images/heatpump-controller/heat-pump-controller-sm-view.png" onerror="this.src='../images/heatpump-controller/heat-pump-controller-sm-view.jpg'; this.onerror=null;" class="img-responsive" alt="Heat pump Controller web interface on an extra small viewport."/><br/>
-              <span class="label">Heat pump Controller web interface on an extra small viewport.</label></p>
+              <span class="label">Heat pump Controller web interface on an extra small viewport.</span></p>
             </div>
           </div>
           <div class="row">
             <div class="col-12">
               <p><img src="../images/heatpump-controller/colours.png" onerror="this.src='../images/heatpump-controller/colours.jpg'; this.onerror=null;" class="img-responsive bordered" alt="Heat pump Controller colour palette shown in the pattern library."/><br/>
-              <span class="label">Heat pump Controller colour palette shown in the <a href="http://rosannafong.github.io/heat-pump-controller/components/colours.html">pattern library <span class="sr-only">for the Heat pump Controller. This link will take you to an external website.</span><span class="fa fa-external-link"></span></a>.</label></p>
+              <span class="label">Heat pump Controller colour palette shown in the <a href="http://rosannafong.github.io/heat-pump-controller/components/colours.html">pattern library <span class="sr-only">for the Heat pump Controller. This link will take you to an external website.</span><span class="fa fa-external-link"></span></a>.</span></p>
             </div>
           </div>
           <!--End main content-->
