--- a/projects/horowhenua-honey-co.html
+++ b/projects/horowhenua-honey-co.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Restaurant 88 Website - Projects - Rosanna Fong Portfolio</title>
-    <meta name="description" content="About the Restaurant 88 website.">
+    <title>Horowhenua Honey Co Website - Projects - Rosanna Fong Portfolio</title>
+    <meta name="description" content="About the Horowhenua Honey Co website.">
     <meta name="author" content="Rosanna Fong">
     <link rel="stylesheet" href="../css/font-awesome.min.css" type="text/css" media="screen"/>
     <link rel="stylesheet" href="../css/main.css" type="text/css" media="screen"/>
@@ -36,9 +36,9 @@
         <div class="intro">
           <div class="container">
             <!--Begin introduction-->
-            <h1>Restaurant 88 Website</h1>
-            <p class="big">A website for Restaurant 88. The aim is to promote their presence in Wellington as well as promoting vietnamese cuisine.<p>
-            <p class="big">Their website can be viewed at <a href="http://restaurant88.co.nz/">restaurant88.co.nz <span class="sr-only">. This link will take you to an external website.</span><span class="fa fa-external-link"></span></a></p>
+            <h1>Horowhenua Honey Co Website</h1>
+            <p class="big">I was recently approached to design the brand collateral and website for Horowhenua Honey Co. The website will eventually contain an online store using Shopify.</p>
+            <p class="big">At the moment, a static HTML preview of the website for Horowhenua Honey Co is available at <a href="https://preview.rosanna.co.nz/">preview.rosannna.co.nz <span class="sr-only">. This link will take you to an external website.</span><span class="fa fa-external-link"></span></a>.</p>
             <!--End introduction-->
           </div>
         </div>
@@ -46,24 +46,24 @@
           <!--Begin main content-->
           <div class="row">
             <div class="col-12">
-              <p><img src="../images/restaurant88/restaurant88-lg-view.png" onerror="this.src='../images/restaurant88/restaurant88-lg-view.jpg'; this.onerror=null;" class="img-responsive" alt="Resaturant 88's website on a large viewport."/><br/>
-              <span class="label">Resaturant 88's website on a large viewport.</span></p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-8">
-              <p><img src="../images/restaurant88/restaurant88-md-view.png" onerror="this.src='../images/restaurant88/restaurant88-md-view.jpg'; this.onerror=null;" class="img-responsive" alt="Resaturant 88's website on a smaller viewport."/><br/>
-              <span class="label">Resaturant 88's website on a smaller viewport.</span></p>
-            </div>
-            <div class="col-4">
-              <p><img src="../images/restaurant88/restaurant88-sm-view.png" onerror="this.src='../images/restaurant88/restaurant88-sm-view.jpg'; this.onerror=null;" class="img-responsive" alt="Resaturant 88's website on an extra small viewport."/><br/>
-              <span class="label">Resaturant 88's website on an extra small viewport.</span></p>
+              <p><img src="../images/horowhenua-honey-co/horowhenua-honey-co-xlg.png" onerror="this.src='../images/horowhenua-honey-co/horowhenua-honey-co-xlg.jpg'; this.onerror=null;" class="img-responsive" alt="Horowhenua Honey Co website on an extra large viewport."/><br/>
+              <span class="label">Horowhenua Honey Co website on an extra large viewport.</span></p>
             </div>
           </div>
           <div class="row">
             <div class="col-12">
-              <p><img src="../images/restaurant88/restaurant88-wireframe.png" onerror="this.src='../images/restaurant88/restaurant88-wireframe.jpg'; this.onerror=null;" class="img-responsive" alt="Resaturant 88's website wireframe for their about page."/><br/>
-              <span class="label">Resaturant 88's website wireframe for their menus page.</span></p>
+              <p><img src="../images/horowhenua-honey-co/horowhenua-honey-co-lg.png" onerror="this.src='../images/horowhenua-honey-co/horowhenua-honey-co-lg.jpg'; this.onerror=null;" class="img-responsive" alt="Horowhenua Honey Co website on a large viewport."/><br/>
+              <span class="label">Horowhenua Honey Co website on a large viewport.</span></p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-8">
+              <p><img src="../images/horowhenua-honey-co/horowhenua-honey-co-sm.png" onerror="this.src='../images/horowhenua-honey-co/horowhenua-honey-co-sm.jpg'; this.onerror=null;" class="img-responsive" alt="Horowhenua Honey Co website on a smaller viewport."/><br/>
+              <span class="label">Horowhenua Honey Co website on a smaller viewport.</span></p>
+            </div>
+            <div class="col-4">
+              <p><img src="../images/horowhenua-honey-co/horowhenua-honey-co-xs.png" onerror="this.src='../images/horowhenua-honey-co/horowhenua-honey-co-xs.jpg'; this.onerror=null;" class="img-responsive" alt="Horowhenua Honey Co website on an extra small viewport."/><br/>
+              <span class="label">Horowhenua Honey Co website on an extra small viewport.</span></p>
             </div>
           </div>
           <!--End main content-->
