--- a/projects/lca2015.html
+++ b/projects/lca2015.html
@@ -46,25 +46,25 @@
           <div class="row">
             <div class="col-12">
               <p><img src="../images/lca2015/lca2015-lg-view.png" onerror="this.src='../images/lca2015/lca2015-lg-view.jpg'; this.onerror=null;" class="img-responsive" alt="linux.conf.au Auckland 2015 website on a large viewport."/><br/>
-              <span class="label">linux.conf.au Auckland 2015 website on a large viewport.</label></p>
+              <span class="label">linux.conf.au Auckland 2015 website on a large viewport.</span></p>
             </div>
           </div>
           <div class="row">
             <div class="col-8">
               <p><img src="../images/lca2015/lca2015-md-view.png" onerror="this.src='../images/lca2015/lca2015-md-view.jpg'; this.onerror=null;" class="img-responsive" alt="linux.conf.au Auckland 2015 website on a smaller viewport."/><br/>
-              <span class="label">linux.conf.au Auckland 2015 website on a smaller viewport.</label></p>
+              <span class="label">linux.conf.au Auckland 2015 website on a smaller viewport.</span></p>
             </div>
             <div class="col-4">
               <p><img src="../images/lca2015/lca2015-sm-view.png" onerror="this.src='../images/lca2015/lca2015-sm-view.jpg'; this.onerror=null;" class="img-responsive" alt="linux.conf.au Auckland 2015 website on an extra small viewport."/><br/>
-              <span class="label">linux.conf.au Auckland 2015 website on an extra small viewport.</label></p>
+              <span class="label">linux.conf.au Auckland 2015 website on an extra small viewport.</span></p>
             </div>
           </div>
           <div class="row">
             <div class="col-12">
               <p><img src="../images/lca2015/lca2015-styleguide.png" onerror="this.src='../images/lca2015/lca2015-styleguide.jpg'; this.onerror=null;" class="img-responsive" alt="linux.conf.au Auckland 2015 website styleguide."/><br/>
-              <span class="label">linux.conf.au Auckland 2015 website styleguide.</label></p>
+              <span class="label">linux.conf.au Auckland 2015 website styleguide.</span></p>
                 <p><img src="../images/lca2015/lca2015-wireframe.png" onerror="this.src='../images/lca2015/lca2015-wireframe.jpg'; this.onerror=null;" class="img-responsive" alt="linux.conf.au Auckland 2015 website wireframe for their about page."/><br/>
-              <span class="label">linux.conf.au Auckland 2015 website wireframe for their about page.</label></p>
+              <span class="label">linux.conf.au Auckland 2015 website wireframe for their about page.</span></p>
             </div>
           </div>
           <!--End main content-->
