--- a/projects/matt-rose.html
+++ b/projects/matt-rose.html
@@ -46,17 +46,17 @@
           <div class="row">
             <div class="col-12">
               <p><img src="../images/matt-rose/matt-rose-lg-view.png" onerror="this.src='../images/matt-rose/matt-rose-lg-view.jpg'; this.onerror=null;" class="img-responsive" alt="Matthew's and Rosanna's Story website on a large viewport."/><br/>
-              <span class="label">Matthew's and Rosanna's Story website on a large viewport.</label></p>
+              <span class="label">Matthew's and Rosanna's Story website on a large viewport.</span></p>
             </div>
           </div>
           <div class="row">
             <div class="col-8">
               <p><img src="../images/matt-rose/matt-rose-art.svg" onerror="this.src='../images/matt-rose/matt-rose-art.png'; this.onerror=null;" class="img-responsive" alt="Matthew's and Rosanna's Story art assets."/><br/>
-              <span class="label">Matthew's and Rosanna's Story art assets.</label></p>
+              <span class="label">Matthew's and Rosanna's Story art assets.</span></p>
             </div>
             <div class="col-4">
               <p><img src="../images/matt-rose/matt-rose-sm-view.png" onerror="this.src='../images/matt-rose/matt-rose-sm-view.jpg'; this.onerror=null;" class="img-responsive" alt="Matthew's and Rosanna's Story website on a small viewport."/><br/>
-              <span class="label">Matthew's and Rosanna's Story website on a small viewport.</label></p>
+              <span class="label">Matthew's and Rosanna's Story website on a small viewport.</span></p>
             </div>
           </div>
           <!--End main content-->
