--- a/projects/generated-shapes.html
+++ b/projects/generated-shapes.html
@@ -46,7 +46,7 @@
           <div class="row">
             <div class="col-8">
               <p><img src="../images/generated-shapes/hero-shape.png" onerror="this.src='../images/generated-shapes/hero-shape.jpg'; this.onerror=null;" class="img-responsive" alt="Complex radial shape."/><br/>
-              <span class="label">Complex radial shape.</label></p>
+              <span class="label">Complex radial shape.</span></p>
             </div>
             <div class="col-4">
               <p><img src="../images/generated-shapes/shapes.png" onerror="this.src='../images/generated-shapes/shapes.jpg'; this.onerror=null;" class="img-responsive" alt="Simple generated shapes."/><br/>
