--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" media="screen"/>
     <link rel="stylesheet" href="css/main.css" type="text/css" media="screen"/>
     <link href="/images/brand/favicon.ico" rel="icon" type="image/x-icon">
+    <script src="js/vendor/modernizr-custom.js"></script>
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -211,57 +212,6 @@
                 </a>
               </div>
             </div>
-            <!--div class="row">
-              <div class="col-6">
-                <a href="projects/generated-shapes.html" class="outer-box">
-                  <img src="images/project-thumbs/generated-shapes-thumb.png" onerror="this.src='images/project-thumbs/generated-shapes-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for Generated Shapes."/>
-                  <div class="caption">
-                    <p class="bigger">Generated Shapes</p>
-                    <p>Computer generated shapes using Python Processing.</p>
-                    <ul class="inline-list">
-                      <li><span class="label">Visual design</span></li>
-                      <li><span class="label">Creative programming</span></li>
-                    </ul>
-                  </div>
-                  <div class="overlay">
-                    <p><span class="sr-only">Find out more about Generated Shapes.</span></p>
-                  </div>
-                </a>
-              </div>
-              
-            </div>
-            <div class="row">
-              <div class="col-6">
-                <a href="projects/argia.html" class="outer-box">
-                  <img src="images/project-thumbs/argia-thumb.png" onerror="this.src='images/project-thumbs/argia-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for Argia."/>
-                  <div class="caption">
-                    <p class="bigger">Argia</p>
-                    <p>A project inspired by Italo Calvino's Invisible cities.</p>
-                    <ul class="inline-list">
-                      <li><span class="label">3D design</span></li>
-                    </ul>
-                  </div>
-                  <div class="overlay">
-                    <p><span class="sr-only">Find out more about Argia.</span></p>
-                  </div>
-                </a>
-              </div>
-              <div class="col-6">
-                <a href="projects/manifesto.html" class="outer-box">
-                  <img src="images/project-thumbs/manifesto-thumb.png" onerror="this.src='images/project-thumbs/manifesto-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for Design Manifesto."/>
-                  <div class="caption">
-                    <p class="bigger">Design Manifesto</p>
-                    <p>My design manifesto.</p>
-                    <ul class="inline-list">
-                      <li><span class="label">Design theory</span></li>
-                    </ul>
-                  </div>
-                  <div class="overlay">
-                    <p><span class="sr-only">Find out more about Design Manifesto.</span></p>
-                  </div>
-                </a>
-              </div>
-            </div-->
           </section>
           <!--End main content-->
         </div>
