--- a/projects/horowhenua-honey-co.html
+++ b/projects/horowhenua-honey-co.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="../css/font-awesome.min.css" type="text/css" media="screen"/>
     <link rel="stylesheet" href="../css/main.css" type="text/css" media="screen"/>
     <link href="/images/brand/favicon.ico" rel="icon" type="image/x-icon">
+    <script src="../js/vendor/modernizr-custom.js"></script>
+    <script src="../js/vendor/modernizr-custom.js"></script>
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -37,7 +39,7 @@
           <div class="container">
             <!--Begin introduction-->
             <h1>Horowhenua Honey Co Website</h1>
-            <p class="big">I was recently approached to design the brand collateral and website for Horowhenua Honey Co. The website will eventually contain an online store using Shopify.</p>
+            <p class="big">I was recently approached to design the brand collateral and website for Horowhenua Honey Co. The website will eventually contain an online store using <a href="https://www.shopify.co.nz/">Shopify <span class="sr-only">. This link will take you to an external website.</span><span class="fa fa-external-link"></span></a>.</p>
             <p class="big">At the moment, a static HTML preview of the website for Horowhenua Honey Co is available at <a href="https://preview.rosanna.co.nz/">preview.rosannna.co.nz <span class="sr-only">. This link will take you to an external website.</span><span class="fa fa-external-link"></span></a>.</p>
             <!--End introduction-->
           </div>
