--- a/template.html
+++ b/template.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" media="screen"/>
     <link rel="stylesheet" href="css/main.css" type="text/css" media="screen"/>
     <link href="/images/brand/favicon.ico" rel="icon" type="image/x-icon">
+    <script src="js/vendor/modernizr-custom.js"></script>
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
