Fixed caption for Horowhenua Honey Co.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   <img src="images/project-thumbs/horowhenua-honey-co-thumb.png" onerror="this.src='images/project-thumbs/horowhenua-honey-co-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for the Horowhenua Honey Co website."/>
                   <div class="caption">
                     <p class="bigger">Horowhenua Honey Co Website</p>
-                    <p>User interface design for controlling heat pumps.</p>
+                    <p>Website design for Horowhenua Honey Co.</p>
                     <ul class="inline-list">
                       <li><span class="label">Branding</span></li>
                       <li><span class="label">Visual design</span></li>
