Added Shopping List App.

--- a/index.html
+++ b/index.html
@@ -62,6 +62,25 @@
                 </a>
               </div>
               <div class="col-6">
+                <a href="projects/shopping-list-app.html" class="outer-box">
+                  <img src="images/project-thumbs/shopping-list-app-thumb.png" onerror="this.src='images/project-thumbs/shopping-list-app-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for the Shopping list app."/>
+                  <div class="caption">
+                    <p class="bigger">Shopping List App</p>
+                    <p>An prototype for a shopping list app.</p>
+                    <ul class="inline-list">
+                      <li><span class="label">Visual design</span></li>
+                      <li><span class="label">User interface design</span></li>
+                      <li><span class="label">User experience design</span></li>
+                    </ul>
+                  </div>
+                  <div class="overlay">
+                    <p><span class="sr-only">Find out more about the Horowhenua Honey Co website.</span></p>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-6">
                 <a href="projects/heat-pump-controller.html" class="outer-box">
                   <img src="images/project-thumbs/heat-pump-controller-thumb.png" onerror="this.src='images/project-thumbs/heat-pump-controller-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for the Heat pump Controller."/>
                   <div class="caption">
@@ -75,6 +94,22 @@
                   </div>
                   <div class="overlay">
                     <p><span class="sr-only">Find out more about the Heat pump Controller.</span></p>
+                  </div>
+                </a>
+              </div>
+              <div class="col-6">
+                <a href="projects/branding.html" class="outer-box">
+                  <img src="images/project-thumbs/branding-thumb.png" onerror="this.src='images/project-thumbs/branding-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for Personal branding."/>
+                  <div class="caption">
+                    <p class="bigger">Personal branding</p>
+                    <p>My personal brand development.</p>
+                    <ul class="inline-list">
+                      <li><span class="label">Branding</span></li>
+                      <li><span class="label">Graphic design</span></li>
+                    </ul>
+                  </div>
+                  <div class="overlay">
+                    <p><span class="sr-only">Find out more about Personal Branding.</span></p>
                   </div>
                 </a>
               </div>
@@ -98,24 +133,6 @@
                 </a>
               </div>
               <div class="col-6">
-                <a href="projects/branding.html" class="outer-box">
-                  <img src="images/project-thumbs/branding-thumb.png" onerror="this.src='images/project-thumbs/branding-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for Personal branding."/>
-                  <div class="caption">
-                    <p class="bigger">Personal branding</p>
-                    <p>My personal brand development.</p>
-                    <ul class="inline-list">
-                      <li><span class="label">Branding</span></li>
-                      <li><span class="label">Graphic design</span></li>
-                    </ul>
-                  </div>
-                  <div class="overlay">
-                    <p><span class="sr-only">Find out more about Personal Branding.</span></p>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-6">
                 <a href="projects/css-sheep.html" class="outer-box">
                   <img src="images/project-thumbs/css-sheep-thumb.png" onerror="this.src='images/project-thumbs/css-sheep-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for CSS3 sheep animation."/>
                   <div class="caption">
@@ -127,6 +144,23 @@
                   </div>
                   <div class="overlay">
                     <p><span class="sr-only">Find out more about my CSS sheep.</span></p>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-6">
+                <a href="projects/vector-graphics-foo.html" class="outer-box">
+                  <img src="images/project-thumbs/vector-art-thumb.png" onerror="this.src='images/project-thumbs/vector-art-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for Vector Graphics Foo."/>
+                  <div class="caption">
+                    <p class="bigger">Vector Graphics Foo</p>
+                    <p>A collection of some of my vector art.</p>
+                    <ul class="inline-list">
+                      <li><span class="label">Graphic design</span></li>
+                    </ul>
+                  </div>
+                  <div class="overlay">
+                    <p><span class="sr-only">Find out more about Vector Graphics Foo.</span></p>
                   </div>
                 </a>
               </div>
@@ -175,39 +209,6 @@
                   </div>
                   <div class="overlay">
                     <p><span class="sr-only">Find out more about VBC's Blog Theme.</span></p>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-6">
-                <a href="projects/vector-graphics-foo.html" class="outer-box">
-                  <img src="images/project-thumbs/vector-art-thumb.png" onerror="this.src='images/project-thumbs/vector-art-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for Vector Graphics Foo."/>
-                  <div class="caption">
-                    <p class="bigger">Vector Graphics Foo</p>
-                    <p>A collection of some of my vector art.</p>
-                    <ul class="inline-list">
-                      <li><span class="label">Graphic design</span></li>
-                    </ul>
-                  </div>
-                  <div class="overlay">
-                    <p><span class="sr-only">Find out more about Vector Graphics Foo.</span></p>
-                  </div>
-                </a>
-              </div>
-              <div class="col-6">
-                <a href="projects/algorithmic-flora.html" class="outer-box">
-                  <img src="images/project-thumbs/algorithmic-flora-thumb.png" onerror="this.src='images/project-thumbs/algorithmic-flora-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for Algorithmic Flora."/>
-                  <div class="caption">
-                    <p class="bigger">Algorithmic Flora</p>
-                    <p>Experimentation with patterns, fractals, and layering.</p>
-                    <ul class="inline-list">
-                      <li><span class="label">Visual design</span></li>
-                      <li><span class="label">Creative programming</span></li>
-                    </ul>
-                  </div>
-                  <div class="overlay">
-                    <p><span class="sr-only">Find out more about Algorithmic Flora.</span></p>
                   </div>
                 </a>
               </div>
