Added external link icon.

--- a/projects/shopping-list-app.html
+++ b/projects/shopping-list-app.html
@@ -39,7 +39,7 @@
             <!--Begin introduction-->
             <h1>Shopping List App</h1>
             <p class="big">Shopping List is a concept I had for an application. This application is designed to easily manage items in a shopping list and share lists with anyone you like.</p>
-            <p class="big">You can see a prototype of the <a href="https://invis.io/9S5XW9YUR">Shopping List application on InvisionApp<span class="sr-only">This link takes you to an external site. You will be taken to the Shopping List Application on InvisionApp.</span></a></p>
+            <p class="big">You can see a prototype of the <a href="https://invis.io/9S5XW9YUR">Shopping List application on InvisionApp<span class="sr-only">This link takes you to an external site. You will be taken to the Shopping List Application on InvisionApp.</span><span class="fa fa-external-link"></span></a></p>
             <!--End introduction-->
           </div>
         </div>
