--- a/about.html
+++ b/about.html
@@ -52,6 +52,7 @@
                 <ul>
                   <li>Responsive design</li>
                   <li>User interface design</li>
+                  <li>User experience design</li>
                   <li>Creating wireframes in myBalsamiq</li>
                   <li>Designing in Sketch</li>
                   <li>Creating style guides and pattern libraries</li>
